# openstat

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: deploy-hetzner.yml  publish-npm-sdk.yml  workflow.yml
apps/backend/: .env.example  package.json
apps/backend/src/: app.ts  context.ts  ingestion-redis.test.ts  ingestion.integration.test.ts  rate-limited-routes.test.ts  rate-limited-routes.ts  redaction.test.ts  redis-rate-limit-store.test.ts  redis-rate-limit-store.ts  schemas.test.ts  worker.ts
apps/backend/src/config/: auth-cookie-domain.test.ts  auth-cookie-domain.ts  env.ts
apps/backend/src/openapi/: schemas.ts
apps/backend/src/routes/: api-keys.test.ts  audit.test.ts  audit.ts  auth.ts  deepbook.test.ts  deepbook.ts  health.test.ts  health.ts  ingestion.test.ts  ingestion.ts  onboarding.test.ts  onboarding.ts  read.test.ts  read.ts  workspace.test.ts  workspace.ts
apps/backend/src/scripts/: deepbook-demo.ts  seed-dev.ts
apps/deepbook-agent/: .env.example  Dockerfile  Dockerfile.dockerignore  README.md  package.json  tsconfig.json
apps/deepbook-agent/src/: index.ts  replay.test.ts  replay.ts
apps/docs/: README.md  package.json
apps/docs/gitbook/: README.md  SUMMARY.md  faq.md  mantle-verification.md
apps/docs/gitbook/getting-started/: first-agent.md  quick-installation.md
apps/docs/gitbook/guides/: ai-agent-proofs-on-mantle.md  deepbook-predict-agent-desk.md  (+1 more)
apps/web/: README.md  package.json  vercel.json
apps/web/app/: auth-form.tsx  auth-recovery-form.tsx  globals.css  layout.tsx  page.tsx
apps/web/lib/: auth-client.ts  dashboard-theme.ts  openstat-api.ts
apps/web/scripts/: ignore-build.mjs
deploy/deepbook-agent/: README.md  docker-compose.yml
deploy/deepbook-agent/projects/: project-example.env.example
deploy/hetzner/: .env.example  LAUNCH_CHECKLIST.md  OPERATIONS.md  README.md  docker-compose.yml
deploy/tencent-cloud/proof-verifier/: .env.example  README.md  index.js  local-invoke.js  serverless.yml
docs/: openstat-deepbook-implementation-plan.md  openstat-deepbook-implementation-tasklist.md
docs/architecture/: backend-system-architecture.md  openstat-production-system-design.md  openstat-system-design.md
docs/hackathon/: mantle-submission.md
docs/plans/: openstat-implementation-tasklist.md  openstat-mantle-hackathon-plan.md  openstat-mantle-hackathon-tasklist.md
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: trading_agent.py
sdks/python/src/openstat/: __init__.py  cli.py  client.py  scaffold.py
sdks/python/tests/: test_client.py  test_scaffold.py
(+69 files in other folders)
