[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstat-sdk"
version = "0.1.0"
description = "OpenStat SDK for AI trading agent telemetry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
keywords = ["agent", "ai", "monitoring", "observability", "telemetry", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://openstat.online"
Documentation = "https://docs.openstat.online"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/openstat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
