[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openstat-sdk"
version = "0.2.2"
description = "Native telemetry SDK for AI agents, trading bots, and on-chain workflows"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []
keywords = [
    "agent",
    "ai",
    "llm",
    "monitoring",
    "observability",
    "openstat",
    "telemetry",
    "trading",
    "trading-bots",
    "onchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://openstat.online"
Documentation = "https://docs.openstat.online"
Source = "https://github.com/kezuflow/openstat"
Issues = "https://github.com/kezuflow/openstat/issues"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
openstat = "openstat.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openstat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
